# mhwstuff

./: .gitignore  .gitmodules  11_st101_tesladecal_000_msk3.tex.240701001.hex  Cargo.toml  README.md  TODO  ch03_001_0011_emi.tex.240701001.hex  common_user_file_list.txt  em0152files.txt  em1152files.txt  fakesphare01.tex.240701001.hex  generate_pngs.sh  generate_texs.sh  iconfont_kb00_imlm4.tex.240701001.hex  iconfont_mr_iam.tex.28.hex  iconfont_pad00_imlm4.tex.240701001  iconfont_pad00_imlm4.tex.240701001.hex  iconfont_pad01_imlm4.tex.240701001  iconfont_pad01_imlm4.tex.240701001.hex  iconfont_pad02_imlm4.tex.240701001  iconfont_pad04_imlm4.tex.240701001  it1100_0000_0_atos.tex.240701001  item.json  items.txt  itemuser.txt  lp_nullblack.tex.240701001.hex  lp_nullcolorgray.tex.240701001.hex  lp_nullwhite.tex.240701001  lp_nullwhite.tex.240701001.hex  msg.json  nullwhite.tex.240701001  nullwhite.tex.240701001.hex  nullwhite.tex.28.hex  scripts.sh  skilldata.json  tex040100_0_imlm4.tex.240701001.hex  tex_emicon_em1150_00_0_imlm4.tex.240701001  tex_emicon_em1150_00_0_imlm4.tex.240701001.hex  tex_emicon_em5100_00_0_imlm4.tex.240701001  tex_emicon_em5100_00_0_imlm4.tex.240701001.hex  (+3 more)
cpp/: Makefile  decompressed_wal_00_iml3.tex.240701001  main.cpp  mhwstex  tex.h
mhwstex/: Makefile  gdeflate.h  main.cpp  mhwstex  tex.cpp
misc/: msg_file_list.txt  user_file_list.txt
rsz/: Cargo.toml
rszgen/: Cargo.toml
src/: bc7.rs  byte_reader.rs  compression.rs  dersz.rs  file_ext.rs  main.rs  msg.rs  rsz.rs  rsz_old.rs  tex.rs  user.rs
texs/: ch03_001_0011_emi.tex.240701001  (+24 more)
(+39 files in other folders)
