[package]
name = "mhwstex2dds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.17.0"
byteorder = "1.5.0"
clap = { version = "4.5.20", features = ["derive"] }
image = "0.25.5"
